--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,9 @@ uvicorn==0.35.0
 watchfiles==1.1.0
 websockets==15.0.1
 psycopg2-binary==2.9.9
+SQLAlchemy==2.0.30
+aiosqlite==0.20.0
+asyncpg==0.29.0
+passlib[bcrypt]==1.7.4
+python-jose==3.3.0
+alembic==1.13.1
